// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwDye fsrRBT"
    role="button"
  >
    <button
      class="sc-gsDKAQ sc-dkPtRN iVvbbF govCnj sc-gKclnd bDhdBZ"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-furwcr cmiBqZ"
      />
      <div
        class="sc-iCfMLu bdvlpC"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqiRlB fBQpoB"
  >
    <div
      class="sc-egiyK AIhFW"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pVTFL jQotYl"
      >
        <hr
          class="sc-crHmcD QBZFs"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crHmcD QBZFs"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwDye fsrRBT"
    role="button"
  >
    <button
      class="sc-gsDKAQ sc-dkPtRN iVvbbF klzIpQ sc-gKclnd bDhdBZ"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-furwcr cmiBqZ"
      />
      <div
        class="sc-iCfMLu bdvlpC"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqiRlB fgnFUF"
  >
    <div
      class="sc-hBUSln kZfwTK fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-ksdxgE hJTxxA"
      />
    </div>
    <div
      class="sc-egiyK AIhFW"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pVTFL jQotYl"
      >
        <hr
          class="sc-crHmcD QBZFs"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crHmcD QBZFs"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwDye fsrRBT"
    role="button"
  >
    <button
      class="sc-gsDKAQ sc-dkPtRN iVvbbF girpac sc-eCImPb cXxTDV"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gsDKAQ sc-dkPtRN iVvbbF girpac sc-jRQBWg chxDUC"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iCfMLu bdvlpC"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqiRlB fBQpoB"
  >
    <div
      class="sc-egiyK AIhFW"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pVTFL jQotYl"
      >
        <hr
          class="sc-crHmcD QBZFs"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crHmcD QBZFs"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwDye fsrRBT"
    role="button"
  >
    <button
      class="sc-gsDKAQ sc-dkPtRN iVvbbF hrIhob sc-eCImPb cXxTDV"
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gsDKAQ sc-dkPtRN iVvbbF hrIhob sc-jRQBWg chxDUC"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iCfMLu bdvlpC"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqiRlB fgnFUF"
  >
    <div
      class="sc-hBUSln kZfwTK fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-ksdxgE hJTxxA"
      />
    </div>
    <div
      class="sc-egiyK AIhFW"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pVTFL jQotYl"
      >
        <hr
          class="sc-crHmcD QBZFs"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crHmcD QBZFs"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqseJM eUya-Dg"
        >
          <p
            class="sc-bdvvtL jiNrDF sc-kDTinF"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
